# pixel-patrol-cytodata

./: .gitignore  pyproject.toml
examples/: available_compounds_report.csv  compare_compounds.py  compare_compounds_local.py  list_all_compounds.py
examples/cytodata_cache/: platemap_cache.parquet
src/pixel_patrol_cytodata/: bioio_s3_loader.py  cytodata_project.py  plugin_registry.py  settings.py
